--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -4,16 +4,16 @@
             <div class="card">
                 <div class="card-body">
                     <form action="/links/add" method="POST">
-                        <div class="form-group">
+                        <div class="form-group m-2">
                             <input type="text" name="title" class="form-control" placeholder="Title" autofocus>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group m-2">
                             <input type="url" name="url" class="form-control" placeholder="Url">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group m-2">
                             <textarea name="description" rows="10" class="form-control" placeholder="Descripción"></textarea>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group m-2">
                             <button class="btn btn-danger btn-block">
                                 Guardar
                             </button>
