--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -29,6 +29,8 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     {{!-- Css --}}
     <link rel="stylesheet" href="/css/estilos.css">
+    {{!-- Favicon --}}
+    <link rel="icon" type="image/ico" href="/img/favicon-ico-kino.ico">
 </head>
 
 <body>
