--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -16,6 +16,14 @@
                     <a class="nav-link" href="#">Nosotros</a>
                     <a class="nav-link" href="#">Servicios</a>
                     <a class="nav-link" href="#">Contacto</a>
+                    <div class="users__menu">
+                        <a href="#">
+                            <img class="icono__iniciar" src="/img/iniciar.png" alt="">
+                        </a>
+                        <a href="#">
+                            <img class="icono__registrar" src="/img/register.png" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
