--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -53,6 +53,8 @@
 
     {{{ body }}}
 
+    {{> footer }}
+
     {{!-- Jquery --}}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
