--- a/src/public/sass/estilos.scss
+++ b/src/public/sass/estilos.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 @import 'footer';
 @import 'highlights';
+@import 'policies';
+@import 'nos';
+@import 'ser';
+@import 'con';
 
 @import 'home'
