--- a/src/public/sass/_footer.scss
+++ b/src/public/sass/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
     padding: 20px 120px 20px 0px;
+    margin-top: 60px;
     .container {
         display: flex;
         justify-content: space-around;
