--- a/src/views/partials/home.hbs
+++ b/src/views/partials/home.hbs
@@ -1,5 +1,4 @@
 {{!-- Carrusel --}}
-
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <ol class="carousel-indicators">
         <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
@@ -38,11 +37,9 @@
         <span class="visually-hidden">Next</span>
     </a>
 </div>
-
 {{!-- Fin Carrusel --}}
 
 {{!-- Intro --}}
-
 <div class="intro">
     <div class="container">
         <div class="intro__img">
@@ -63,63 +60,190 @@
         </div>
     </div>
 </div>
-
 {{!-- Fin Intro --}}
 
 {{!-- Destacados --}}
-
-<img src="/img/fondo.png" alt="" class="fondo__trans">
-
 <div class="highlights">
     <div class="container">
         <div class="high__title">
             <h2>Principales servicios digitales</h2>
         </div>
-        <div class="high__body">
-            <div class="high__one">
-                <div class="high__one--title">
-                    <h4>Servicio 1</h4>
+
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+
+                <div class="carousel-item active">
+
+                    <div class="riel__serv">
+                        <div class="container">
+
+                            <div class="serv__one">
+                                <div class="serv__header">
+                                    <h3>Diseño personalizado y original</h3>
+                                </div>
+                                <div class="serv__img">
+                                    <img class="serv__img--item" src="/img/services/design.png" alt="">
+                                </div>
+                                <div class="serv__body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum reprehenderit
+                                        placeat repudiandae molestiae quia quos ipsa.</p>
+                                </div>
+                            </div>
+
+                            <div class="serv__one">
+                                <div class="serv__header">
+                                    <h3>Desarrollo web y móvil</h3>
+                                </div>
+                                <div class="serv__img">
+                                    <img class="serv__img--item" src="/img/services/android.png" alt="">
+                                </div>
+                                <div class="serv__body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum reprehenderit
+                                        placeat repudiandae molestiae quia quos ipsa.</p>
+                                </div>
+                            </div>
+
+                            <div class="serv__one">
+                                <div class="serv__header">
+                                    <h3>Fotografía y retoque profesional</h3>
+                                </div>
+                                <div class="serv__img">
+                                    <img class="serv__img--item" src="/img/services/photo.png" alt="">
+                                </div>
+                                <div class="serv__body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum reprehenderit
+                                        placeat repudiandae molestiae quia quos ipsa.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
-                <div class="high__one--img">
-                    <img src="" alt="">
+                <div class="carousel-item">
+
+                    <div class="riel__serv">
+
+                        <div class="container">
+                            <div class="serv__one">
+                                <div class="serv__header">
+                                    <h3>Planeación organizacional</h3>
+                                </div>
+                                <div class="serv__img">
+                                    <img class="serv__img--item" src="/img/services/planning.png" alt="">
+                                </div>
+                                <div class="serv__body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum reprehenderit
+                                        placeat repudiandae molestiae quia quos ipsa.</p>
+                                </div>
+                            </div>
+
+                            <div class="serv__one">
+                                <div class="serv__header">
+                                    <h3>Diagnóstico SEO/Posicionamiento</h3>
+                                </div>
+                                <div class="serv__img">
+                                    <img class="serv__img--item" src="/img/services/position.png" alt="">
+                                </div>
+                                <div class="serv__body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum reprehenderit
+                                        placeat repudiandae molestiae quia quos ipsa.</p>
+                                </div>
+                            </div>
+
+                            <div class="serv__one">
+                                <div class="serv__header">
+                                    <h3>Producción y edición audiovisual</h3>
+                                </div>
+                                <div class="serv__img">
+                                    <img class="serv__img--item" src="/img/services/video.png" alt="">
+                                </div>
+                                <div class="serv__body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum reprehenderit
+                                        placeat repudiandae molestiae quia quos ipsa.</p>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+
                 </div>
 
-                <div class="high__one--desc">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </a>
+        </div>
+
+        <p class="otc">Regístrate y contrata nuestros servicios<br>ingresando <a href="/signup">Aquí</a></p>
+
+    </div>
+</div>
+{{!-- Fin Destacados --}}
+
+{{!-- Claims --}}
+<div class="claims">
+    <div class="container">
+        <div class="claims__title">
+            <h2>Valores que acreditan nuestros servicios</h2>
+        </div>
+
+        <div class="claims__fig">
+            <div class="claim-a">
+                <img src="/img/claims/atencion.png" alt="" class="img__claim">
+                <p class="txt__claim">Asesoramiento humano y atención personalizada.</p>
             </div>
 
-            <div class="high__two">
-                <div class="high__two--title">
-                    <h4>Servicio 2</h4>
-                </div>
-
-                <div class="high__two--img">
-                    <img src="" alt="">
-                </div>
-
-                <div class="high__two--desc">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
+            <div class="claim-a">
+                <img src="/img/claims/calidad.png" alt="" class="img__claim">
+                <p class="txt__claim">Trabajo profesional y de calidad.</p>
             </div>
 
-            <div class="high__three">
-                <div class="high__three--title">
-                    <h4>Servicio 3</h4>
-                </div>
-
-                <div class="high__three--img">
-                    <img src="" alt="">
-                </div>
-
-                <div class="high__three--desc">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
+            <div class="claim-a">
+                <img src="/img/claims/tecno.png" alt="" class="img__claim">
+                <p class="txt__claim">Tecnologías actualizadas y funcionales.</p>
             </div>
+        </div>
+
+    </div>
+</div>
+{{!-- Fin Claims --}}
+
+{{!-- Asesoría --}}
+<div class="solicitud">
+    <div class="container">
+        <div class="sol__title">
+            <h2>Cuéntanos tu caso</h2>
+            <p>Solicita una asesoría personalizada en comunicaciones desde hoy</p>
+        </div>
+
+        <div class="sol__body">
+
+            <div class="body__section">
+                <h3>Regístrate</h3>
+                <a href="/signup">
+                    <img src="/img/usr-red.png" alt="" class="sol__img">
+                </a>
+                <p>Registra tus datos personales y realiza una solicitud contándonos tu caso o indicando el servicio que
+                    requieres</p>
+            </div>
+
+            <div class="body__section">
+                <h3>Contáctanos</h3>
+                <a href="/contacto">
+                    <img src="/img/whats.png" alt="" class="sol__img">
+                </a>
+                <p>Comunícate a cualquiera de nuestras líneas de atención y solicita un ticket de asesoramiento
+                    <strong>¡sin costo alguno!</strong> </p>
+            </div>
+
         </div>
     </div>
 </div>
-
-
-{{!-- Fin Destacados --}}
+{{!-- Fin Asesoría --}}
