--- a/src/public/sass/_footer.scss
+++ b/src/public/sass/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
     padding: 20px 120px 20px 0px;
     margin-top: 60px;
+    position: relative;
     .container {
         display: flex;
         justify-content: space-around;
