--- a/src/public/sass/_highlights.scss
+++ b/src/public/sass/_highlights.scss
@@ -1,14 +1,29 @@
 .highlights {
     margin-top: 120px;
-
-    .high__body {
-        margin-top: 60px;
-        display: flex;
-        text-align: center;
-        justify-content: space-around;
-
-        .high__one, .high__two, .high__three {
-            width: 20%;
+    position: relative;
+    .riel__serv {
+        margin-top: 80px;
+        .container {
+            display: flex;
+            justify-content: space-evenly;
+            text-align: center;
+    
+            .serv__one {
+                width: 20%;
+    
+                .serv__img {
+                    .serv__img--item {
+                        width: 60px;
+                        margin: 10px;
+                    }
+                    
+                }
+            }
         }
+    }
+    
+    .otc {
+        text-align: center;
+        margin-top: 40px;
     }
 }
