--- a/src/public/sass/_home.scss
+++ b/src/public/sass/_home.scss
@@ -33,6 +33,13 @@ a {
     }
 }
 
+.backg {
+    width: 100%;
+    opacity: 20%;
+    position: absolute;
+    z-index: 0;
+}
+
 .ados {
     color: $gris;
     text-decoration: none;
@@ -53,8 +60,10 @@ a {
         display: flex;
         justify-content: center;
         .intro__img {
+            z-index: 1;
             img {
                 width: 400px;
+                z-index: 1;
             }
         }
 
@@ -75,7 +84,7 @@ a {
         height: 20px;
         margin-left: 12px;
         &:hover {
-            transition: all .6s;
+            transition: all 0.6s;
             opacity: 80%;
         }
     }
@@ -84,16 +93,46 @@ a {
         height: 22px;
         margin-left: 12px;
         &:hover {
-            transition: all .6s;
+            transition: all 0.6s;
             opacity: 80%;
         }
     }
 }
 
-.fondo__trans {
-    opacity: 80%;
-    width: 100%;
-    margin-top: -240px;
-    z-index: 0;
-    position: absolute;
+.solicitud {
+    margin-top: 80px;
+    position: relative;
+    .container {
+        .sol__body {
+            display: flex;
+            justify-content: space-evenly;
+            margin-top: 80px;
+
+            .body__section {
+                width: 30%;
+                text-align: center;
+                a {
+                    .sol__img {
+                        margin: 20px;
+                        opacity: 80%;
+                        &:hover {
+                            transition: all .4s;
+                            opacity: 100%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.slogan {
+    text-align: center;
+    margin-top: 120px;
+    position: relative;
+    .container {
+        .slogan__txt {
+            font-size: 36px;
+        }
+    }
 }
