--- a/src/public/css/estilos.css
+++ b/src/public/css/estilos.css
@@ -61,8 +61,57 @@
   margin-top: 40px;
 }
 
+.inner__nos {
+  width: 100%;
+  position: relative;
+}
+
+.nos {
+  margin-top: 120px;
+  position: relative;
+}
+.nos .container .nos__header {
+  margin-top: 60px;
+  text-align: center;
+}
+.nos .container .nos__body {
+  display: block;
+}
+.nos .container .nos__body .nos__body--item {
+  display: block;
+  margin-top: 60px;
+}
+.nos .container .nos__body .nos__body--item .item--title {
+  text-align: center;
+  margin-bottom: 40px;
+}
+.nos .container .nos__body .nos__body--item .item--body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nos .container .nos__body .nos__body--item .item--body img {
+  width: 500px;
+  margin: 20px;
+}
+.nos .container .nos__body .nos__body--item .item--body p {
+  width: 30%;
+}
+.nos .container .partners {
+  text-align: center;
+  margin-top: 80px;
+  height: 460px;
+}
+.nos .container .partners .part__body {
+  margin-top: 60px;
+}
+.nos .container .partners .part__body .aliance p {
+  margin-top: 40px;
+}
+
 .inner__con {
   width: 100%;
+  position: relative;
 }
 
 .claims {
