--- a/src/views/layouts/nosotros.hbs
+++ b/src/views/layouts/nosotros.hbs
@@ -1,3 +1,110 @@
 {{!-- Inner --}}
-<img src="/img/inner-nosotros-kino.jpg" alt="" class="inner__con">
+<img src="/img/inner-nosotros-kino.jpg" alt="" class="inner__nos">
 {{!-- Fin Inner --}}
+
+{{!-- Title --}}
+<div class="nos">
+    <div class="container">
+        <div class="nos__header">
+            <h1>Nosotros somos | K1n0.com</h1>
+            <p>Una agencia de <strong>comunicación digital</strong> para la <strong>planeación estratégica</strong> y la
+                <strong>visibilidad</strong> de tu negocio
+            </p>
+        </div>
+
+        <div class="nos__body">
+
+            <div class="nos__body--item">
+                <div class="item--title">
+                    <h3>Misión</h3>
+                </div>
+                <div class="item--body">
+                    <img src="/img/mision.jpg" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, sint. Cum provident nemo eligendi,
+                        praesentium consequatur itaque cupiditate sapiente ex officia magni. Cumque ipsam et numquam
+                        optio quos nostrum deserunt.</p>
+                </div>
+            </div>
+
+            <div class="nos__body--item">
+                <div class="item--title">
+                    <h3>Visión</h3>
+                </div>
+                <div class="item--body" style="text-align: right;">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, sint. Cum provident nemo eligendi,
+                        praesentium consequatur itaque cupiditate sapiente ex officia magni. Cumque ipsam et numquam
+                        optio quos nostrum deserunt.</p>
+                    <img src="/img/mision.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="nos__body--item">
+                <div class="item--title">
+                    <h3>Valores</h3>
+                </div>
+                <div class="item--body">
+                    <img src="/img/mision.jpg" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, sint. Cum provident nemo eligendi,
+                        praesentium consequatur itaque cupiditate sapiente ex officia magni. Cumque ipsam et numquam
+                        optio quos nostrum deserunt.</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="partners">
+            <div class="part__title">
+                <h3>Nuestros aliados</h3>
+                <h4>Certifican nuestra labor</h4>
+            </div>
+            <div class="part__body">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="aliance">
+                                <a href="">
+                                    <img src="/img/brands/logo-ajm.png" alt="">
+                                    <p>
+                                        Asesorías Jurídicas Medellín<br>
+                                        Abogados profesionales en Medellín
+                                    </p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="aliance">
+                                <a href="">
+                                    <img src="/img/brands/logo-farsali.png" alt="">
+                                    <p>
+                                        Farsáli Colombia<br>
+                                        Proveedores supermayoristas de productos cosméticos
+                                    </p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="aliance">
+                                <a href="">
+                                    <img src="/img/brands/logo-teacompano.png" alt="">
+                                    <p>
+                                        Teacompaño<br>
+                                        Servicios de Enfermería domicialiaria
+                                    </p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{{!-- Fin Title --}}
